fix: Show thumbnail in labelling jobs and improve font contrast

--- a/frontend/src/app/features/labelling-jobs/labelling-jobs.component.scss
+++ b/frontend/src/app/features/labelling-jobs/labelling-jobs.component.scss
@@ -123,6 +123,13 @@
     display: flex;
     flex-direction: column;
 
+    .job-thumbnail {
+      cursor: pointer;
+      height: 160px;
+      object-fit: cover;
+      width: 100%;
+    }
+
     mat-card-header {
       .job-title {
         display: flex;
@@ -170,11 +177,11 @@
 
           .label {
             font-weight: 500;
-            color: rgba(0, 0, 0, 0.6);
+            color: rgba(0, 0, 0, 0.85);
           }
 
           .value {
-            color: rgba(0, 0, 0, 0.87);
+            color: rgba(0, 0, 0, 1);
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
